Fixed: wflow-consoleweb - Builders - Removed white gap on the bottom of properties panel apply button. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/builder/builder.css
+++ b/wflow-consoleweb/src/main/webapp/builder/builder.css
@@ -1496,6 +1496,10 @@ div.section, .header > ol {
 .element-properties .tab-content > div {
     height: 100%;
 }
+.element-properties-footer-actions{
+    padding-top: 10px;
+    background: #9bb1c1;
+}
 #apply-btn {
     width: 100%;
     border-radius: 0;
